@@ -10,6 +10,7 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -54,7 +55,7 @@ public class RequestUtil {
         if (cookieValue == null) {
             cookieValue = "";
         } else if (isEncode) {
-            cookieValue = URLEncoder.encode(cookieValue, "UTF-8");
+            cookieValue = URLEncoder.encode(cookieValue, StandardCharsets.UTF_8);
         }
         Cookie cookie = new Cookie(cookieName, cookieValue);
         if (maxAge != null) {
